# KouluTehtavat

viikkoTehtava-1/: guessing_game.cpp  main.cpp  viikkoTehtava-1.pro
viikkoTehtava-2/: Game.cpp  Game.h  README.md  main.cpp  viikkoTehtava-2.pro
viikkoTehtava-4/: Asiakas.cpp  Asiakas.h  Luottotili.cpp  Luottotili.h  Pankkitili.cpp  Pankkitili.h  README.txt  main.cpp  pankkiohjelma
viikkoTehtävä6/: README.md  Student.h  main.cpp  student_program
viikkoTehtävä7/: CMakeLists.txt  calculator.files  calculator.pro  mainwindow.cpp  mainwindow.h
viikkonTehtava-3/: chef  chef.cpp  chef.h  main.cpp
viikkotTehtava-8/: CMakeLists.txt
viikkotTehtava-8/include/: Button.hpp  Game.hpp  ProgressBar.hpp
viikkotTehtava-8/src/: Button.cpp  Game.cpp  ProgressBar.cpp  main.cpp
viikkotTehtävät-5/: Makefile  README.txt  main.cpp  notifikaattori  notifikaattori.cpp  notifikaattori.hpp  seuraaja.cpp  seuraaja.hpp
